--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -8,8 +8,11 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
+    <packaging>jar</packaging>
+
 
     <artifactId>rest</artifactId>
+
     <dependencies>
         <dependency>
             <groupId>com.backend</groupId>
