--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -6,10 +6,8 @@
         <artifactId>logbook</artifactId>
         <groupId>com.backend</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
     <artifactId>domain</artifactId>
-
-
 </project>
